--- a/backEnd/templates/upload.html
+++ b/backEnd/templates/upload.html
@@ -1,5 +1,12 @@
 <html>
-<body style="font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; text-align: center; padding: 15px; background-color: #1B2731">
-        <h3>{{.Status}}</h3>
-    </body>
+
+<body
+    style="font-family: 'Poppins', sans-serif; font-weight: bold; line-height: 2rem; font-size:1.3rem; color: white; text-align: center; padding: 15px; background-color: #1B2731">
+    <h3>{{.Status}}</h3>
+    <br>
+    <div>
+        <bold>Please Go back to the previous page</bold>
+    </div>
+</body>
+
 </html>
