styles.css New Background color New color for the navbar

--- a/backEnd/web/style.css
+++ b/backEnd/web/style.css
@@ -1,7 +1,7 @@
 :root {
-    --background: #1b1129;
-    --navbarbg: #459c45;
-    --hyperlinkText: #522b79;
+    --background: #1B2731;
+    --navbarbg: #080d11;
+    --hyperlinkText: #ddc3f7;
     --hyperlinkHover: #aa4376;
     --buttonBackground: #3e80c2;
     --buttonBackgroundHover: #2d57d6;
